deployment/dependencies/nyxid-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nyxid-frontend
  namespace: ${NAMESPACE}
  labels:
    app: nyxid-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nyxid-frontend
  template:
    metadata:
      labels:
        app: nyxid-frontend
    spec:
      containers:
        - name: nyxid-frontend
          image: ${NYXID_FRONTEND_IMAGE}
          imagePullPolicy: ${IMAGE_PULL_POLICY}
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
