deployment/dependencies/nyxid-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nyxid-frontend
  namespace: ${NAMESPACE}
spec:
  selector:
    app: nyxid-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
